--- a/src/main.scss
+++ b/src/main.scss
@@ -2,14 +2,14 @@
  * Main Styles
  */
 
-// red: #FF0000,
-// orange: #FF7F00,
-// yellow: #FFFF00,
-// green: #00FF00,
-// blue: #0000FF,
-// indigo: #4B0082,
-// violet: #9400D3,
-// primary: #CF649A,
-// secondary: #669999,
-// text: #666666,
-// accent: #E6E6E6,
+// text: #666666
+// accent: #E6E6E6
+// red: #FF0000
+// orange: #FF7F00
+// yellow: #FFFF00
+// green: #00FF00
+// blue: #0000FF
+// indigo: #4B0082
+// violet: #9400D3
+// primary: #CF649A
+// secondary: #669999
